// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has valid snapshot 1`] = `
<div
  className="App"
>
  <div
    className="interactions"
  >
    <div
      className="form"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  type="button"
>
  Give me more
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<div
  className="form"
>
  <form>
    <input
      type="text"
    />
    <button
      type="submit"
    >
      Search
    </button>
  </form>
</div>
`;
